test/kuard_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  labels:
    app: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:1
          name: kuard
          ports:
            - containerPort: 8080
              name: http


---

apiVersion: v1
kind: Service
metadata:
  name: kuard-svc
  labels:
    app: kuard
spec:
  selector:
    app: kuard
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https-internal
    port: 443
    protocol: TCP
    targetPort: 444

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging 
  generation: 1
  labels:
    app: kuard
  name: kuard
spec:
  ingressClassName: nginx
  rules:
    - host: <dns_name>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: <service_name>
                port:
                  number: 8080
  tls:
  - hosts:
    - <dns_name>
    secretName: <secret_name>
